# bynav_ros2_driver

./: README.md  build.sh  install_dependencies.sh
bynav_ros_driver/: CMakeLists.txt  bynav_ros_driver_plugins.xml  novatel_oem7_driver_nodelets.xml  package.xml
bynav_ros_driver/config/: nmea_parameters.yaml  ntrip_parameters.yaml  oem7_msgs.yaml  std_init_commands.yaml  std_msg_topics.yaml  std_oem7_raw_msgs.yaml
bynav_ros_driver/include/bynav_ros_driver/: oem7_imu.hpp  oem7_message_decoder_if.hpp  oem7_message_handler_if.hpp  oem7_message_ids.hpp  oem7_message_util.hpp  oem7_messages.h  oem7_receiver_if.hpp  oem7_ros_messages.hpp  tcp_client.hpp
bynav_ros_driver/launch/: connect_net.launch.py  connect_tty.launch.py
bynav_ros_driver/src/: align_handler.cpp  bestpos_handler.cpp  driver_parameter.hpp  ins_handler.cpp  message_handler.cpp  message_handler.hpp  nmea_handler.cpp  odometry_handler.cpp  oem7_debug_file.cpp  oem7_debug_file.hpp  oem7_driver_util.hpp  oem7_imu.cpp  oem7_message_decoder.cpp  oem7_message_decoder_lib.cpp  oem7_message_decoder_lib.hpp  oem7_message_node.cpp  oem7_message_util.cpp  oem7_raw_message_if.hpp  oem7_receiver.hpp  oem7_receiver_net.cpp  oem7_receiver_port.cpp  oem7_ros_messages.cpp  oem7_ros_publisher.hpp  receiverstatus_handler.cpp  tcp_client.cpp  time_handler.cpp
dependencies/foxy/: libgeographic-dev_1.50.1-1build1_amd64.deb  libgeographic19_1.50.1-1build1_amd64.deb  ros-foxy-gps-msgs_1.0.9-1focal.20230609.185534_amd64.deb  ros-foxy-nmea-msgs_2.0.0-1focal.20230527.050446_amd64.deb
dependencies/galactic/: ros-galactic-gps-msgs_1.0.5-1focal.20221203.095923_amd64.deb  ros-galactic-nmea-msgs_2.0.0-3focal.20221203.095843_amd64.deb
dependencies/humble/: libgeographic-dev_1.52-1_amd64.deb  libgeographic19_1.52-1_amd64.deb  ros-humble-gps-msgs_2.0.3-1jammy.20240217.052941_amd64.deb  ros-humble-nmea-msgs_2.0.0-4jammy.20240217.052751_amd64.deb
